[package]
name = "lune-std-sdl3"
version = "0.3.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune extended library - Luau"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.1", features = ["luau", "luau-jit"] }

lune-utils = { version = "0.3.1", path = "../lune-utils" }
sdl3 = "0.14.36"
image = "0.25.6"
once_cell = "1.21.3"
